# generic_evm_plugin

./: .gitignore  .pylintrc  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
src/: main.py
src/generic_evm_plugin/: generic_evm_plugin.py
src/util/: covalent_client.py  explorer_client.py  generic_evm_transaction.py  transaction_generator.py
tests/generic_evm_plugin/: test_generic_evm_plugin.py  test_transaction_generator.py
tests/testdata/bsc/: bscscan_bep20_sample.json  bscscan_internal_sample.json  covalent_sample.json  sample.json
tests/util/: test_explorer_client.py
